# codex-switch-helper

./: AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: promotion-article.zh-CN.md
src/: main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/dream-skin/: UPSTREAM.md
src-tauri/resources/dream-skin/assets/: dream-skin.css
src-tauri/src/: dream_skin.rs  main.rs
src-tauri/src/models/: usage.rs
src-tauri/src/modules/: mod.rs  usage_db.rs  usage_scanner.rs
