[package]
name = "codex-switch-helper"
version = "0.2.3"
description = "Codex profile switch helper"
authors = ["frank"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.4.1"
uuid = { version = "1.19.0", features = ["v4"] }
winreg = "0.55.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }
tauri-plugin-process = "2.3.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
